API Gateway changes