@@ -1,20 +1,27 @@
 package com.railease.users.model;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@RequiredArgsConstructor
 public class UserPrincipal implements UserDetails {
+
     private final User user;
+
+    public UserPrincipal(User user) {
+        this.user = user;
+    }
+
+    public User getUser() {
+        return user;
+    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + this.user.getRole()));
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + this.user.getRole()));
     }
 
     @Override
@@ -24,26 +31,8 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public String getUsername() {
-        return user.getUsername();
-    }
-
-
-    public User getUser() {
-        return user;
-    }
-
-    public Long getUserId() {
-        return (long) user.getId();
-    }
-
-    public String getEmail() {
         return user.getEmail();
     }
-
-    public Role getRole() {
-        return user.getRole();
-    }
-
 
     @Override
     public boolean isAccountNonExpired() {
@@ -64,5 +53,4 @@ public class UserPrincipal implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-
 }
